--- a/lib/template.html
+++ b/lib/template.html
@@ -1,6 +1,27 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<link rel="stylesheet" type="text/css" href="licenses.css">
+</head>
+<body>
+<h2>{{name}}</h2>
+<table>
+<tr>
+<th>Package Group</th>
+<th>Package Artifact</th>
+<th>Package Version</th>
+<th>Remote Licenses</th>
+<th>Local Licenses</th>
+</tr>
 {{#licenses.license}}
-<b>{{name}}</b>
-<b>{{version}}</b>
-<b>{{licenses}}</b>
-<b>{{file}}</b>
+<tr>
+<td>{{name}}</td>
+<td>N/A</td>
+<td>{{version}}</td>
+<td>{{licenses}}</td>
+<td>{{file}}</td>
+</tr>
 {{/licenses.license}}
+</table>
+</body>
+</html>
