src: Local Licenses column on the HTML report

--- a/lib/resources/template.html
+++ b/lib/resources/template.html
@@ -19,7 +19,7 @@
 <td>N/A</td>
 <td>{{version}}</td>
 <td>{{#licenses.license}}{{url}}{{/licenses.license}}</td>
-<td>{{url}}</td>
+<td>{{#licenses.license}}{{localLicense}}{{/licenses.license}}</td>
 </tr>
 {{/dependencies.dependency}}
 </table>
