--- a/licenses/licenses.html
+++ b/licenses/licenses.html
@@ -44,7 +44,7 @@
 <tr>
 <td>N/A</td>
 <td>license-checker</td>
-<td>15.0.0</td>
+<td>16.0.0</td>
 <td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;BSD-3-Clause</td>
 <td><a href=LICENSE-CHECKER_BSD-3-CLAUSE.TXT>LICENSE-CHECKER_BSD-3-CLAUSE.TXT</a></td>
 </tr>
@@ -57,10 +57,10 @@
 </tr>
 <tr>
 <td>N/A</td>
-<td>require-dir</td>
-<td>0.3.2</td>
+<td>node-project-validator</td>
+<td>0.1.3</td>
 <td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;MIT</td>
-<td><a href=REQUIRE-DIR_MIT.TXT>REQUIRE-DIR_MIT.TXT</a></td>
+<td><a href=NODE-PROJECT-VALIDATOR_MIT.TXT>NODE-PROJECT-VALIDATOR_MIT.TXT</a></td>
 </tr>
 <tr>
 <td>N/A</td>
@@ -79,7 +79,7 @@
 <tr>
 <td>N/A</td>
 <td>yargs</td>
-<td>8.0.2</td>
+<td>11.0.0</td>
 <td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;MIT</td>
 <td><a href=YARGS_MIT.TXT>YARGS_MIT.TXT</a></td>
 </tr>
